--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <main>
       <section class="container">
+        <h1>TEMPERATUR CONVERTER</h1>
         <article>
           <p>
             Masukkan suhu derajat celcius (&degC) ke kotak di bawah, lalu klik
